# wyomingia

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
wyomingia/: __init__.py  __main__.py  handler.py  languages.py  transcriber.py
